添加Scala 2.13 REPL在高版本OpenJDK下的一些異常說明。